@@ -2,6 +2,7 @@
 
 - Strip trailing whitespace when redirecting standard output streams to log
 - Add openmetrics and security-jwks to BOM
+- Add getProperty method to AbstractConfigurationAwareModule
 
 228
 
